--- a/lesson4/views/index.hbs
+++ b/lesson4/views/index.hbs
@@ -10,6 +10,8 @@
     {{#each cite}}
         {{this}} <input title="{{this}}" type="radio" name="type" value="{{this}}">
     {{/each}}
+    <input type="text" name="name" title="your name">
+    <input type="checkbox" name="remember" value="remember">
     <input type="submit" id="submit" value="go">
 </form>
 </body>
